--- a/.github/workflows/build-prerelease.yml
+++ b/.github/workflows/build-prerelease.yml
@@ -18,7 +18,7 @@ jobs:
           v-version: latest
         id: v
       - name: Build repository app
-        run: v -prod ngc.v -o ngc -os linux
+        run: v -prod laravel_permissions.v -o laravel_permissions -os linux
       - name: Release binary to latest tag
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
@@ -27,4 +27,4 @@ jobs:
           prerelease: true
           title: "Pre-Release Build for Linux"
           files: |
-            ngc
+            laravel_permissions
